[gd_scene load_steps=3 format=4 uid="uid://bfnomj38x8st1"]

[ext_resource type="Script" uid="uid://yuql8oy8nxep" path="res://Script/Optimization/MeshInstanceOptimize.gd" id="1_r5py1"]

[sub_resource type="ArrayMesh" id="ArrayMesh_c4bpp"]
_surfaces = [{
"aabb": AABB(-2.59012, -0.0341492, -0.296509, 5.18024, 0.0682983, 0.593018),
"attribute_data": PackedByteArray("AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 36,
"vertex_data": PackedByteArray("kMQlwADgC70A0Jc+kMQlwADgC70A0Je+kMQlwADgCz0A0Je+kMQlQADgC70A0Je+kMQlwADgC70A0Je+kMQlwADgC70A0Jc+kMQlwADgCz0A0Je+kMQlwADgC70A0Je+kMQlQADgC70A0Je+kMQlwADgCz0A0Je+kMQlwADgCz0A0Jc+kMQlwADgC70A0Jc+kMQlwADgC70A0Jc+kMQlwADgCz0A0Jc+kMQlQADgCz0A0Jc+kMQlQADgCz0A0Jc+kMQlwADgCz0A0Jc+kMQlwADgCz0A0Je+kMQlwADgC70A0Jc+kMQlQADgC70A0Jc+kMQlQADgC70A0Je+kMQlQADgCz0A0Jc+kMQlQADgC70A0Jc+kMQlwADgC70A0Jc+kMQlQADgC70A0Je+kMQlQADgC70A0Jc+kMQlQADgCz0A0Jc+kMQlQADgC70A0Je+kMQlQADgCz0A0Je+kMQlwADgCz0A0Je+kMQlwADgCz0A0Je+kMQlQADgCz0A0Je+kMQlQADgCz0A0Jc+kMQlQADgCz0A0Jc+kMQlQADgCz0A0Je+kMQlQADgC70A0Je+AAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//3//////AAD/f/////8AAP9//////wAA////f/9//n////9//3/+f////3//f/5/")
}]

[node name="TablaLarga" type="StaticBody3D"]

[node name="Tabla" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.55671e-08, 0, 1.5, 0, 1.5, 0, -1.5, 0, -6.55671e-08, 0, 0, 0)
mesh = SubResource("ArrayMesh_c4bpp")
script = ExtResource("1_r5py1")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="Tabla" method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="Tabla" method="_on_visible_on_screen_notifier_3d_screen_exited"]
